# ExplainX

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: README.md  Untitled  _audit_out.txt  _fix_ps_lockdown.reg  _run_audit.bat  _run_audit.py  _run_audit_now.cmd  _run_mvp_qa_tests.bat  _run_single_script_tests.bat  _single_script_test_out.txt  alembic.ini  audit_pipeline.py  build_video.py  demo_asset_generation.py  demo_visual_pipeline.py  download_openvino_sd15.py  pyproject.toml  pyrightconfig.json  refine_pipeline.py  requirements-dev.txt  run.py  test_animation_timeline.py  test_asset_intelligence.py  test_asset_library.py  test_asset_processor.py  test_asset_repository.py  test_diagram_composer.py  test_frame_renderer.py  test_openvino_backend.py  test_prompt_engine.py  test_prompts.py  test_scene_composer.py  test_timeline_player.py  test_video_encoder.py
backend/animation/: __init__.py  animation_builder.py  animation_library.py  animation_metadata.py  camera_animation.py  easing.py  keyframes.py  timeline_engine.py  timeline_serializer.py  transition_engine.py
backend/app/: __init__.py  main.py
backend/archive/: CLEANUP_REPORT.md  README.md  asset_processor_test_environment.py  translation_argos_shim.py
backend/asset_intelligence/: __init__.py  caches.py  container.py
backend/asset_library/: README.md
backend/asset_processor/: __init__.py  asset_cache.py  asset_pipeline.py  asset_validator.py  background_remover.py  config.py  exceptions.py  image_normalizer.py  image_resizer.py  metadata_generator.py  models.py  (+1 more)
(+620 files in other folders)
